--- a/contact.html
+++ b/contact.html
@@ -28,13 +28,13 @@
 		<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
 	</head>
 	<body class="contact">
-	
+
 		<!-- Header -->
 			<header id="header">
 				<h1 id="logo"><a href="index.html">Twenty <span>by HTML5 UP</span></a></h1>
 				<nav id="nav">
 					<ul>
-						<li class="current"><a href="index.html">Welcome</a></li>
+						<li class="current"><a href="index.html">第一个</a></li>
 						<li class="submenu">
 							<a href="">Layouts</a>
 							<ul>
@@ -61,7 +61,7 @@
 		
 		<!-- Main -->
 			<article id="main">
-
+	
 				<header class="special container">
 					<span class="icon fa-envelope"></span>
 					<h2>Get In Touch</h2>
@@ -105,7 +105,7 @@
 					</section>
 				
 			</article>
-
+	
 		<!-- Footer -->
 			<footer id="footer">
 			
@@ -122,6 +122,6 @@
 				</ul>
 			
 			</footer>
-
+	
 	</body>
 </html>
