--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
 				<h1 id="logo"><a href="index.html">Twenty <span>by HTML5 UP</span></a></h1>
 				<nav id="nav">
 					<ul>
-						<li class="current"><a href="index.html">第一个</a></li>
+						<li class="current"><a href="index.html">啥啥啥</a></li>
 						<li class="submenu">
 							<a href="">Layouts</a>
 							<ul>
