--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
 								</li>
 							</ul>
 						</li>
-						<li><a href="#" class="button special">Sign Up</a></li>
+						<li><a href="#" class="button special">登出</a></li>
 					</ul>
 				</nav>
 			</header>
