--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ layout: landing-page
 								<header>
 									<h2>Behold the <strong>icons</strong> that visualize what you’re all about. or just take up space. your call bro.</h2>
 								</header>
-								<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu comteger ut fermentum lorem. Lorem ipsum dolor sit amet. Sed tristique purus vitae volutpat ultrices. eu elit eget commodo. Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo.</p>
+								<p>sss</p>
 								<footer>
 									<ul class="buttons">
 										<li><a href="#" class="button">Find Out More</a></li>
