--- a/index.html
+++ b/index.html
@@ -6,15 +6,14 @@ layout: landing-page
 
 				<header class="special container">
 					<span class="icon fa-bar-chart-o"></span>
-					<h2>As this is my <strong>twentieth</strong> freebie for HTML5 UP
+					<h2>再大的困难，再无知的需求，也抵挡不了
 					<br />
-					I decided to give it a really creative name.</h2>
-					<p>Turns out <strong>Twenty</strong> was the best I could come up with. Anyway, lame name aside,
+					</h2>
+					<p>
 					<br />
-					it's minimally designed, fully responsive, built on HTML5/CSS3/<strong>skel</strong>,
-					and, like all my stuff,
+				对技术的狂热
 					<br />
-					released for free under the <a href="http://html5up.net/license">Creative Commons Attribution 3.0</a> license. Have fun!</p>
+					</p>
 				</header>
 					
 				<!-- One -->
