--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@ layout: landing-page
 
 				<header class="special container">
 					<span class="icon fa-bar-chart-o"></span>
-					<h2>再大的困难，再无知的需求，也抵挡不了
+					<h2>再大的困难，再无知的需求，也抵挡不了对技术的狂热
 					<br />
 					</h2>
 					<p>
 					<br />
-				对技术的狂热
 					<br />
 					</p>
 				</header>
